add-feat-frontend

--- a/.dockerignore
+++ b/.dockerignore
@@ -30,5 +30,19 @@
 **/values.dev.yaml
 **/build
 **/dist
+
+node_modules
+npm-debug.log
+.DS_Store
+.env
+.git
+.gitignore
+
+frontend/node_modules
+backend/node_modules
+
+**/Dockerfile
+**/docker-compose.yml
+
 LICENSE
 README.md
