--- a/compose.yaml
+++ b/compose.yaml
@@ -14,16 +14,55 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: ../Dockerfile
+      dockerfile: Dockerfile 
     ports:
       - "5173:5173"
-    working_dir: /app
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     environment:
+      - VITE_API_URL=http://localhost:5000/api
       - CHOKIDAR_USEPOLLING=true
-    command: ["npm", "run", "dev"]
+    depends_on:
+      - backend
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile 
+    ports:
+      - "5000:5000"
+    environment:
+      - DB_HOST=mysql
+      - DB_USER=root
+      - DB_PASSWORD=root
+      - DB_NAME=laundry_db
+      - DB_PORT=3306
+      - PORT=5000
+    depends_on:
+      - mysql
+
+  mysql:
+    image: mysql:8
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: laundry_db
+    ports:
+      - "3307:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+      PMA_USER: root
+      PMA_PASSWORD: root
+    depends_on:
+      - mysql
+
+volumes:
+  mysql_data:
+
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
