--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fontsource/dm-serif-display": "^5.2.8",
     "@fontsource/poppins": "^5.2.7",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
