--- a/compose.yaml
+++ b/compose.yaml
@@ -12,21 +12,21 @@ version: "3.8"
 
 services:
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile 
-    ports:
-      - "5173:5173"
-    environment:
-      - VITE_API_URL=http://localhost:5000/api
-      - CHOKIDAR_USEPOLLING=true
-    depends_on:
-      - backend
+  build:
+    context: ./frontend
+    dockerfile: Dockerfile
+  ports:
+    - "5173:5173"
+  environment:
+    - VITE_API_URL=http://backend:5000/api
+    - CHOKIDAR_USEPOLLING=true
+  depends_on:
+    - backend
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile 
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
     environment:
@@ -36,6 +36,9 @@ services:
       - DB_NAME=laundry_db
       - DB_PORT=3306
       - PORT=5000
+      - JWT_SECRET=supersecretjwtkey
+    volumes:
+      - ./backend:/app
     depends_on:
       - mysql
 
@@ -62,7 +65,6 @@ services:
 
 volumes:
   mysql_data:
-
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
