--- a/compose.yaml
+++ b/compose.yaml
@@ -8,39 +8,41 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 
-version: "3.8"
 
 services:
   frontend:
-  build:
-    context: ./frontend
-    dockerfile: Dockerfile
-  ports:
-    - "5173:5173"
-  environment:
-    - VITE_API_URL=http://backend:5000/api
-    - CHOKIDAR_USEPOLLING=true
-  depends_on:
-    - backend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    environment:
+      - VITE_API_URL=http://localhost:5001/api
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - backend
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "5001:5000"
     environment:
+      - PORT=5000
       - DB_HOST=mysql
       - DB_USER=root
       - DB_PASSWORD=root
       - DB_NAME=laundry_db
       - DB_PORT=3306
-      - PORT=5000
       - JWT_SECRET=supersecretjwtkey
     volumes:
       - ./backend:/app
     depends_on:
       - mysql
+    restart: always
+    command: >
+      sh -c "sleep 10 && npm start"
 
   mysql:
     image: mysql:8
@@ -65,6 +67,8 @@ services:
 
 volumes:
   mysql_data:
+
+
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
